[tool.poetry]
name = "re-splice-primers"
version = "0.1.0"
description = "Find all possible combinations of spike-in primers in an amplicon scheme"
authors = ["Nicholas Minor <nrminor@wisc.edu>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
polars = "^0.19.19"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.7"
pdoc = "^14.1.0"
mypy = "^1.7.1"
ipykernel = "^6.27.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
